--- a/example/app/index.html
+++ b/example/app/index.html
@@ -5,6 +5,6 @@
     <title>@zioroboco/bff example</title>
   </head>
   <body>
-    <div id="root"></div>
+    <code style="font-size: 2em" id="output" />
   </body>
 </html>
